0033 - 0133 Fixing issues#1003: User badge on chat (1) 0133 - 0210 Continued with Fixing issues#1003: User badge on chat (0.62) 1100 - 1142 Fixing issues#1006: UI Bugs (0.7) 1257 - 1336 Fixing issues#1004: Alignment issue (0.65) 1433 - 1513 Fixing issues#1001: Spacing issue (0.67) 1513 - 1549 Fixing issues#999: UI issue sent icon (0.6) 1610 - 1654 Fixing issues#997: Spacing issue (0.73) 1654 - 1754 Inspected and temporarily fixed issue #995 (1) 1754 - 1814 Continued with fixing issue #995 (0.33) 2200 - 2233 Inspected issue #994: Incoming message style (0.55) 2233 - 2310 Fixing issues#990 and #989: Spacing issue (0.62) 2310 - 2335 Fixing issues#988: Search message issue (0.42)

--- a/src/app/components/sewn-direct-message/sewn-direct-message.component.scss
+++ b/src/app/components/sewn-direct-message/sewn-direct-message.component.scss
@@ -61,6 +61,7 @@
     font-family: 'Muli', sans-serif;
     overflow: hidden;
     float: right;
+    border-left: 1px solid #dedede;
 }
 
 .chat-head {
@@ -307,8 +308,12 @@
 }
 
 .account {
-    margin-bottom: 15px;
+    margin-bottom: 8px;
+    margin-top: 8px;
     cursor: pointer;
+    &.activate_account {
+        background-color: #f8f8f8;
+    }
 }
 
 .chat-profile__time {
@@ -815,6 +820,14 @@
     padding: 10px;
     position: relative;
     z-index: 9;
+}
+
+.recent-tag {
+    font-size: 14px;
+    color: #747588;
+    font-weight: 600;
+    display: block;
+    margin: 15px 20px;
 }
 
 @media (max-width: 767px) {
